# coh2-cos

./: README.md  build.sh  electron-builder.yml  main.js  package-lock.json  package.json
hq/assets/: flag.css  package-lock.json  package.json
hq/config/: config.yml
hq/dev/: dev.sh
hq/src/: coh2-log-loader.go  coh2-log-reader.go  go.mod  go.sum  main.go
hq/src/cmd/: html-templates.go
hq/src/templates/: .gitignore  ability.go  match.html
tauri/: README.md  package.json
tauri/src-tauri/: Cargo.toml  tauri.conf.json
tauri/src-tauri/src/: main.rs
