[package]
name = "some"
version = "0.1.0"
description = "COH2-COS"
authors = [ "you" ]
license = ""
repository = ""
default-run = "COH2-COS"
edition = "2018"
build = "src/build.rs"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
tauri = { version = "0.10", features = [ "all-api" ] }

[target."cfg(windows)".build-dependencies]
winres = "0.1"

[features]
embedded-server = [ "tauri/embedded-server" ]
no-server = [ "tauri/no-server" ]

[[bin]]
name = "COH2-COS"
path = "src/main.rs"
